# autonomous_vehicle_simulator

./: config.py  requirements.txt
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/base/: MapObject.cpp  MapObject.h
cpp/config/: constants.h
cpp/data/: DataClasses.h  classes.h  constants.h
cpp/grpc_service/: CMakeLists.txt
cpp/map/: Map2D.cpp  Map2D.h
cpp/objects/: Free.cpp  Free.h  Grass.cpp  Grass.h  MapObject.cpp  MapObject.h  Obstacle.cpp  Obstacle.h  Road.cpp  Road.h  Vehicle.cpp  Vehicle.h
cpp/objects/sensors/: Lidar2D.cpp  Lidar2D.h  Sensor.cpp  Sensor.h  SensorData.h
cpp/objects/sensors/proto/: compile_proto.sh  sensor_data.proto
cpp/objects/vehicle/: PIDController.h  Vehicle.cpp  Vehicle.h
cpp/res/: logging_config.json
cpp/sensors/: Lidar2D.cpp  Lidar2D.h  README.md  Sensor.cpp  Sensor.h
cpp/sensors/proto/: sensor_data.proto
cpp/setup/: Setup.h
cpp/tests/: CMakeLists.txt  map_vehicle_integration_test.cpp  test_lidar2d.cpp  test_map2d.cpp  test_vehicle.cpp
cpp/utils/: GraphUtils.hpp  ImageUtils.hpp  LoggingUtils.hpp  Profiler.h  README.md  logging.cpp  logging.h  utils.cpp  utils.h
cpp/vehicle/: README.md  Vehicle.cpp  Vehicle.h
doc/: project_summary.md
python/: config.py
python/grpc/: sensor_client.py  sensor_data.proto  sensor_data_pb2.py  sensor_data_pb2_grpc.py
python/scripts/: generate_map_ui.py
res/: objects_size.json
res/maps/: cell_colors.json
